补充本地图片

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/06.learn-drive-and-reward-xue-xi-nei-qu-li-he-jiang-li.md
@@ -1,4 +1,4 @@
-# 06.学习内驱力和奖励
+06.学习内驱力和奖励
 
 ## 6 Learn drive and reward
 
@@ -186,9 +186,7 @@ The anterior hippocampus that responds to signal entropy is famous for the disco
 
 Most of us have no idea how Halle Berry smells and her smell might not be unique enough to activate Halle Berry neuron in the hippocampus, however, even the smell signal can get there fast via just a few synapses in the olfactory bulb, olfactory tubercle, piniform cortex, and the entorhinal cortex \(see picture\). However, if one could hear the sound of Halle's voice, it might meet the sound signal in the olfactory tubercle, contribute to recognition, and result in the subsequent activation of the Halle neuron in the hippocampus or further down in the neocortex.
 
-我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里（见下图）。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。
-
-[![Olfactory system anatomy](https://supermemo.guru/images/thumb/0/04/Olfactory_system_anatomy.jpg/692px-Olfactory_system_anatomy.jpg)](https://supermemo.guru/wiki/File:Olfactory_system_anatomy.jpg)
+我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里（见下图）。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。![Olfactory system anatomy](assets/692px-Olfactory_system_anatomy.jpg)
 
 > **Figure:** Olfactory system anatomy. The smell signal can get to the hippocampus fast via just a few synapses in the olfactory bulb, olfactory tubercle, piniform cortex, and the entorhinal cortex. \(source: Wikipedia\)
 >
@@ -232,7 +230,7 @@ In the summer of 1977, while looking for extraterrestrial intelligence, SETI res
 
 1977 年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius\_\(constellation\))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家 Jerry Ehman 在打印输出上圈出 6 个与信号相对应的字母，并在旁边写上了「Wow!」（哇！）。
 
-[![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
+![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](assets/500px-Wow_signal.jpg)
 
 > **Figure:** A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the [Wow! signal](https://en.wikipedia.org/wiki/Wow!_signal). \(source: Wikipedia\)
 >
@@ -302,7 +300,7 @@ In computational terms, knowledge valuation network can be compared to a [decisi
 
 用计算机的术语，知识评估网络可以比作[决策树](https://en.wikipedia.org/wiki/Decision_tree)。目标和情感决定了树根的核心价值。知识片段之间的语义联系可以被解释为从目标到细节的部分价值转移。精心整合和精心选择的知识的组织良好的语义网络需要几毫秒才能做出专家决策。这就是卡尼曼所说的自动[快速思考](https://supermemo.guru/wiki/Fast_thinking)（如果你对需要缓慢解决问题的棘手问题感兴趣，请参见[如何解决任何问题？](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)）中。同样的过程，作为决策或解决问题的基础，参与知识评估。像许多专家的决定一样，评估速度很快，而且通常是在意识参与度很低的情况下进行的。简而言之，我们有时很快知道一些事情，却无法完全解释原因。这个过程几乎不受我们自己的控制，更不用说学校老师的控制了。为了有效学习，估值必须很高。
 
-[![xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles](https://supermemo.guru/images/thumb/9/97/Exemplary_xefer_output.jpg/675px-Exemplary_xefer_output.jpg)](https://supermemo.guru/wiki/File:Exemplary_xefer_output.jpg)
+![xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles](assets/675px-Exemplary_xefer_output.jpg)
 
 > **Figure:** xefer is a tool that helps understand knowledge as a network. It relies on semantic links between Wikipedia articles.[Try it](https://xefer.com/wikipedia)
 >
@@ -1087,7 +1085,7 @@ Given enough time and access to knowledge-rich environments, without the need fo
 >
 > 另一个有助于解释建立[连贯](https://supermemo.guru/wiki/Coherence)知识的[出现](https://supermemo.guru/wiki/Emergence)的类比是[知识结晶类比](https://supermemo.guru/wiki/Knowledge_crystallization)：
 >
-> [![Crystallization metaphor of schooling and unschooling](https://supermemo.guru/images/thumb/8/8a/Crystallization_metaphor_of_schooling.png/500px-Crystallization_metaphor_of_schooling.png)](https://supermemo.guru/wiki/File:Crystallization_metaphor_of_schooling.png)
+> ![Crystallization metaphor of schooling and unschooling](assets/500px-Crystallization_metaphor_of_schooling.png)
 >
 > > **Figure:** In **perfect schooling** we create a perfect crystal of knowledge. In college, we add an extra crystal of specialization. In reality though, learning looks a bit less perfect. For most kids, knowledge never builds sufficient coherence and falls apart due to interference \(i.e. fast forgetting\). As a result, in **real schooling**, knowledge asymptotically reaches a certain volume and keeps churning around from that point on with little progress in stability or coherence. In contrast, in **free learning**, the acquisition of knowledge is chaotic and uneven. However, as long as it is based on the learn drive, the volume of knowledge is very large. Individual crystals of knowledge collide, and build consistency and coherence. This in turn helps stability and further integration of knowledge. By the time of college, in terms of volume, free learners should know far more than ordinary students. Free knowledge has multiple areas of strength, and multiple areas of weakness. However, it superior in coherence. This is why it is more applicable in problem solving
 > >
