--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/08.education-counteracts-evolution-jiao-yu-di-xiao-jin-hua.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/08.education-counteracts-evolution-jiao-yu-di-xiao-jin-hua.md
@@ -96,7 +96,7 @@ The next seemingly logical step in improving education is to introduce coercion.
 
 改善教育的下一个看似合乎逻辑的步骤是引入强制。如果模仿是如此有效，为什么不为了社会利益而强制要求？受教育的权利变得普遍。久而久之，权利成为一种责任。推理类似于疫苗接种背后的理由。 如果我们教育大多数公民，我们就可以通过无数新规则和推进文明的新解决方案来建立一种新型社会。 重要的是，良好的教育服务于个人。如果这对公民和社会都有好处，那么强制它不能被视为侵犯人权。在进化过程中，强制也被证明是有效和受欢迎的。在一群被讽刺地称为「_学校_」的鱼群中，没有一条鱼能走错一步，否则整个鱼群就会变成高速公路上的连环相撞。
 
-[![Preschool torture device](https://supermemo.guru/images/thumb/0/04/Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg/300px-Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)](https://supermemo.guru/wiki/File:Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)
+![File:Multi-seat toddler desk as perfect preschool torture device.jpg](assets/Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)
 
 > **Figure:** Multi-seat toddler desk is a preschool torture device. [The brain says "keep exploring"](https://supermemo.guru/wiki/Education_counteracts_evolution). The authoritarian teacher says "Stop moving! Read my lips!". For more see: [Would you have a heart to cage a puppy?](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)
 >
@@ -182,7 +182,7 @@ The bigger the [knowledge tree](https://supermemo.guru/wiki/Knowledge_tree) the 
 
 **模仿**和**反抗**是人类大脑中硬编码的**探索算法**的重要组成部分。**教育的第一个错误**是提供线性[课程](https://supermemo.guru/wiki/Curriculum)，这被认为是智慧的直接途径（与**一系列建议**相对）。课程提供模仿与探索的限制。然而，这是一种被误导的模仿，因为它没有考虑正在构建的[拼图游戏](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)的状态。建造一座无处可去的桥太容易了。所有的孩子都要以同样的速度同时模仿，并且轨道中的所有突变，而不是在探索上的改进，将逐渐导致[模仿的崩溃](https://supermemo.guru/wiki/Knowledge_crystallization)。你认知中的典型学校不会让你通过化学考试后就离开一年级。你需要先学你的字母和数字。**教育的第二个错误**是使课程成为必修课。义务教育会引发反抗，干扰模仿，并在过程中制造混乱。模仿轨道不再可预测。预先设计的模仿使它崩溃。触发反抗使模仿更快地崩溃。一开始，孩子们停止探索，然后他们停止模仿。最后，他们可能会同等地讨厌学校和学习。[网络之战](https://supermemo.guru/wiki/War_of_the_networks)导致[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)、冷漠和沮丧。通过过头的努力，我们正在建设一个不幸的社会。
 
-[![A dog submit to lost freedom via learned helplessness](https://supermemo.guru/images/thumb/c/c6/Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg/200px-Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg)](https://supermemo.guru/wiki/File:Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg)
+![](assets/Learned_helplessness-_dogs_and_school_kids_accept_their_fate.jpg)
 
 > **Figure:** Even if children [hate school](https://supermemo.guru/wiki/Why_kids_hate_school) they accept their fate via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). This destroys their [natural love of learning](https://supermemo.guru/wiki/Pleasure_of_learning), suppresses natural creativity, deprives of independence, and may lead to mental disorders later in life \(picture source: Wikipedia\)
 >
