--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/11.optimum-push-zone-zui-jia-tui-dong-qu.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/11.optimum-push-zone-zui-jia-tui-dong-qu.md
@@ -8,7 +8,7 @@
 
 **最佳推动区**是一个最小外部压力的范围，使孩子相较于没有外部影响时更好地发展。例如，与其他孩子的竞争可能鼓励更努力的学习。自然，外部压力也可能导致回归。当压力水平超过达到相同改进水平所需时，进步也可能出现。推动区是根据长期效果来定义的，长期效果与短期效果有很大的不同。
 
-[![Optimal push zone in education](https://supermemo.guru/images/thumb/f/f6/Optimal_push_zone.png/800px-Optimal_push_zone.png)](https://supermemo.guru/wiki/File:Optimal_push_zone.png)
+![File:Optimal push zone.png](assets/800px-Optimal_push_zone.png)
 
 > **Figure:** **Optimum push zone**\(in blue\) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning \(**regress zone** in black\). Schooling results in increased tolerance for coercion via learned helplessness \(in green\). It also decreases the learning outcomes and increases the required level of coercion
 >
