--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/16.childhood-amnesia-tong-nian-shi-yi-zheng.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/16.childhood-amnesia-tong-nian-shi-yi-zheng.md
@@ -181,7 +181,7 @@ The illusory absence of declarative memory may extend up to the age of 6 or 7, a
 
 虚假的陈述性记忆缺失可能延续到 6 或 7 岁，应该被解释为大脑发育的指标，即一种受欢迎的现象。如果你的孩子不记得字母表，那就不是责骂的理由。下面这张由 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 收集的[遗忘曲线](https://supermemo.guru/wiki/Forgetting_curve)图展示了学龄前儿童的可塑性和稳定性之间的平衡关系（更多细节请看[这里](https://supermemo.guru/wiki/SuperMemo_does_not_work_for_kids)）：
 
-[![A forgetting curve from a preschooler&apos;s SuperMemo collection](https://supermemo.guru/images/thumb/5/56/Forgetting_curve_from_preschoolers_SuperMemo_collection.jpg/800px-Forgetting_curve_from_preschoolers_SuperMemo_collection.jpg)](https://supermemo.guru/wiki/File:Forgetting_curve_from_preschoolers_SuperMemo_collection.jpg)
+![](assets/800px-Forgetting_curve_from_preschoolers_SuperMemo_collection.jpg)
 
 > **Figure:** A forgetting curve from a preschooler's SuperMemo collection. The absence of forgetting indicates the absence of intentional declarative learning. The decay constant is nearly zero which makes optimum interval meaningless. 1706 repetition cases have been recorded. This flat forgetting curve would go unnoticed in older versions of SuperMemo due to the adult-centric assumption that on Day=0, retrievability is 100%. Overtime, this forgetting curve will lean down to produce a graph typical of adult learning
 >
@@ -222,7 +222,7 @@ In the following graph, we can see that until the age of 2, the child could hard
 
 在下面的图表中，我们可以看到，直到 2 岁，孩子几乎不能形成 2 个月的记忆。
 
-[![Best-interval-vs-age.jpg](https://supermemo.guru/images/thumb/a/a2/Best-interval-vs-age.jpg/600px-Best-interval-vs-age.jpg)](https://supermemo.guru/wiki/File:Best-interval-vs-age.jpg)
+![ est-interval-vs-age.jpg](assets/600px-Best-interval-vs-age.jpg)
 
 Naturally, in [SuperMemo](https://supermemo.guru/wiki/SuperMemo), best interval is also a function of the period in which the program had been in use \(it takes years to produce intervals on the order of decades\). For this reason, best interval graph is interesting, but it is not revealing.
 
@@ -232,7 +232,7 @@ A better measure of amnesia is to compare best interval ratios between two users
 
 一个更好的衡量失忆症的方法是比较两个使用者之间的最佳间隔比率：儿童和成人。在图中，30% 的起点（儿童容量）是高估的，因为成人最初不受记忆的限制，而是受 SuperMemo 早期可达到的间隔长度的限制。
 
-[![Measuring childhood amnesia with SuperMemo](https://supermemo.guru/images/thumb/b/bf/Comparison_of_child_and_adult_memory_performance.jpg/800px-Comparison_of_child_and_adult_memory_performance.jpg)](https://supermemo.guru/wiki/File:Comparison_of_child_and_adult_memory_performance.jpg)
+![Measuring childhood amnesia with SuperMemo](assets/800px-Comparison_of_child_and_adult_memory_performance.jpg)
 
 > **Figure:** We can measure the relative extent of childhood amnesia, by comparing the increase in the span of long-term memories in a child and in an adult. In the presented graph, an average student is compared with a single child in a period between the ages of 1.0 and 3.5 years. The horizontal axis refers to the child's age in years. The vertical axis shows the child-to-adult ratio of the maximum memory stability achieved in the learning process. While an adult shows a rapid progression in developing long-term memories, a child may struggle to form memories lasting beyond a month \(assuming no review\). In the presented example, it takes some 3-4 years before a child's performance approaches the adult levels. However, even then, the comparison may be distorted by the natural limit to the increase in memory stability \(data was collected with SuperMemo that imposes function constraints for the sake of efficient use in learning\). Similarly, the starting point of 30% in child/adult ratio is an overestimate due the fact that the adult is initially limited not by his memory, but by the length of intervals achievable early in spaced repetition. Moreover, adults also differ by a wide margin in their ability to formulate well-structured questions in the learning process. A comparison with an excellent adult student might keep children at a disadvantage even in their teen years
 >
@@ -293,7 +293,7 @@ An exemplary picture \(actual data\) based on 9 data points, and cut-off point o
 
 基于 9 个数据点和 8 个月的截止点的示例性图片（实际数据）使得有可能以 90％ 的置信度表明童年失忆症持续了儿童生命的前 2.65 年。该实验可以安全地在 5 岁结束，因为失忆症结束时的置信水平接近 1.00，并且失忆症结束的预期日期是 2.84（即记录的第一个事件的年龄加上预期距离）。有趣的是，在儿童时期结束时，使用类似的方法确定失忆症，从外表看，孩子可能仍然无法记住超过一周。这也许可以解释为什么高度的情感内容对于令人难忘的事件来说是必不可少的，以突破情景记忆的平均留存。
 
-[![Earliest-memory.jpg](https://supermemo.guru/images/c/ce/Earliest-memory.jpg)](https://supermemo.guru/wiki/File:Earliest-memory.jpg)
+![Earliest-memory.jpg](assets/Earliest-memory.jpg)
 
 Obviously, measuring amnesia is a hazy science. Minimum memory survival is arbitrary. Confidence levels are wild approximations. Memories registered as "earliest" today may be forgotten in a year or in 10 years. New data points may show up at any time, even at teen age. New technologies make it easy to document events accurately even though verification of recall is always inexact science.
 
@@ -315,7 +315,7 @@ I was able to produce a similar graph using my own autobiographical memories. In
 
 我能用我自己的自传记忆做出一个类似的图表。在一个我称之为「回忆日记」的无关项目中，我试图收集我童年和青春期的所有记忆。我从 13 岁开始写下这些记忆，并一直坚持到今天。我通过回忆，记录了 20 世纪 60 年代和 70 年代发生的大多数事件，这些事件发生在 20 世纪 80 年代初。到 20 世纪 90 年代，我基本上已经没有新的事件可以记录了。新数据点的可靠性非常低。这些可能是植入的记忆或纯粹的幻想和妄想。这种努力最大的价值来自于我一丝不苟地记录下我能回忆起的所有事情。这不是一次有时间的一次性努力。这是一个持续一生的努力，我可能会在任何时候中断我的活动，只为了草草记下对小学的回忆。1981 年之后，我的「回忆日记」变得严肃起来，延伸到大学时代的所有情景记忆，这张图表就变得毫无意义了。因此，记录在案的事件数量暴增。它们在发生后立即被记录下来。这对早期的记忆是不公平的，然而，图表中的最后一点可以作为一个快照的记忆，从一个给定的时间点，当我们记得很多最近的事件。
 
-[![Woz-retrospective-recall-curve.jpg](https://supermemo.guru/images/f/f0/Woz-retrospective-recall-curve.jpg)](https://supermemo.guru/wiki/File:Woz-retrospective-recall-curve.jpg)
+![Woz-retrospective-recall-curve.jpg](assets/Woz-retrospective-recall-curve.jpg)
 
 Interestingly, on multiple occasions I documented forgetting of episodes recalled earlier. A primary school memory recalled at 20, might be forgotten at 30, or even at 50. Exhaustive recall documentation will then bring different results at different ages. If I was to begin this project at later ages, the result would differ. The number of documented episodes would drop significantly and the shape of the curve would be different. In other words, the recall curve in adulthood keep being reshaped by forgetting.
 
@@ -442,7 +442,7 @@ In the context of schooling, an interesting small-sample research was carried ou
 >
 > 我最早的记忆是求妈妈不要带我去幼儿园。这是一种典型的不愉快的记忆，很可能会在生活中留下印记。我的粗略估计是那时我可能已经三岁了。时间还早，街上一片漆黑。那一年大概是 1965 年。大约 50 年后，我在谷歌地图上找到了这个地方。直到今天，这个地方在我看来还是阴森森的（见下图）。我妈妈拉着我从 Jackowskiego 街走到幼儿园，我完全不喜欢这样的景象。她会在上班前做那件事。当时的末日感觉部分是由早起和黑暗造成的。部分原因是幼儿园枯燥的气氛，小地方挤满了不开心、昏昏欲睡的孩子。对我来说，幼儿园绝对不是一件好事。当时，在共产主义和不那么富裕的波兰，这些设施看起来更像一个养鸡场:
 >
-> [![Gloomy-Jackowskiego.jpg](https://supermemo.guru/images/thumb/d/d0/Gloomy-Jackowskiego.jpg/800px-Gloomy-Jackowskiego.jpg)](https://supermemo.guru/wiki/File:Gloomy-Jackowskiego.jpg)
+> ![Gloomy-Jackowskiego.jpg](assets/800px-Gloomy-Jackowskiego.jpg)
 >
 > I am not sure why I could not stay at home with my beloved granny. I only know that granny would live at times in a village with her other daughter. Mom was a sole bread winner for her 3 kids.
 >
