--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/19.childhood-passions-tong-nian-de-ji-qing.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/19.childhood-passions-tong-nian-de-ji-qing.md
@@ -36,7 +36,7 @@ Look at the picture! It is a page from a 6 grader's biology notebook. Doesn't it
 
 看这幅画！这是一个六年级学生生物笔记本上的一页。这难道不表明学校教育是多么美好、有趣和鼓舞人心吗？如果我告诉你这个笔记本有 66 个类似的精心制作的图像呢？你不认为绘画作品会对孩子的思维和学习产生重大影响吗？更棒的是，如果我告诉你，40 年后这个孩子还能生动地回忆起那些照片和相关的故事，那会怎么样？
 
-[![A page from a 6 grader&apos;s biology notebook](https://supermemo.guru/images/thumb/e/e5/6_grader_biology_notebook.jpg/469px-6_grader_biology_notebook.jpg)](https://supermemo.guru/wiki/File:6_grader_biology_notebook.jpg)
+![A page from a 6 grader&apos;s biology notebook](assets/469px-6_grader_biology_notebook.jpg)
 
 > **Figure:** A page from a passionate 6-grader's school notebook in biology
 >
