--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/20.why-kids-hate-school-wei-shi-mo-hai-zi-men-tao-yan-xue-xiao.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/20.why-kids-hate-school-wei-shi-mo-hai-zi-men-tao-yan-xue-xiao.md
@@ -83,7 +83,7 @@ See also: [I wish I had dropped out](https://supermemo.guru/wiki/I_wish_I_had_dr
 
 另见：[我希望我退学](https://supermemo.guru/wiki/I_wish_I_had_dropped_out)
 
-![img](https://supermemo.guru/images/thumb/f/ff/School_makes_me_feel_sad.jpg/500px-School_makes_me_feel_sad.jpg)
+ ![img](assets/500px-School_makes_me_feel_sad.jpg)
 
 School makes me wanna die
 
