--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/21.mountain-climb-metaphor-pa-shan-lei-bi.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/21.mountain-climb-metaphor-pa-shan-lei-bi.md
@@ -76,7 +76,7 @@ The example flowchart of passionate and prolific learning begins at the time of 
 
 激情和高产学习的例子流程图始于孩童时期看 Spielberg 的电影_「E.T.」_。在这一点上，激情和兴趣像树一样蔓延开来，并最终以获得天体物理学博士学位达到顶峰。在这一点上，毕业生通常是自由探索，他们的进一步成功取决于知识、人才、机会等。我认为童年激情的存续可能是取得更高成就的最重要因素。
 
-[![Evolving passions: from an ET movie to a PhD in astrophysics](https://supermemo.guru/images/thumb/f/f3/Evolving_passions_from_ET_to_astrophysics.png/600px-Evolving_passions_from_ET_to_astrophysics.png)](https://supermemo.guru/wiki/File:Evolving_passions_from_ET_to_astrophysics.png)
+![Evolving passions: from an ET movie to a PhD in astrophysics](https://supermemo.guru/images/thumb/f/f3/Evolving_passions_from_ET_to_astrophysics.png/600px-Evolving_passions_from_ET_to_astrophysics.png)
 
 > **Figure:** Childhood passions may meander from an ET movie, via YouTube and planets, to various branches of science. They may culminate in a PhD in astrophysics and a career in science. On the way, the child may pick up the alphabet, reading skills, algebra and other necessary basics. The road to knowledge is based on exploratory learning. The joy starts in childhood and, ideally, continues well into the retirement age
 >
@@ -110,7 +110,7 @@ The problem may begin when [curriculum](https://supermemo.guru/wiki/Curriculum) 
 
 当[课程](https://supermemo.guru/wiki/Curriculum)设计人员试图追溯天体物理学专家的发展时，问题可能就开始了。跳过 ET 电影、系外行星，并将生肖视为迷信禁止是非常诱人的。YouTube 可能不包括在内，因为它充满了潜在的干扰。专注单一主题是这种方法的关键，也是通向无聊的直接途径。在学校的头几个月是用来练习字母表中的字母：每个字母 3 天。我们很容易从[课程](https://supermemo.guru/wiki/Curriculum)中去除所有可能激发新激情的多余材料。高学习量、高[干扰](21.mountain-climb-metaphor-pa-shan-lei-bi.md)和高[强迫性学习](https://supermemo.guru/wiki/Coercive_learning)会通过[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)迅速导致[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的丧失。一些孩子可能仍然喜欢花很长时间学习字母表（例如，通过初期老师的才能）。很少人会在 10 岁时保持对数学的热爱。当他们 15 岁的时候，大多数人都会讨厌他们的[学校教育经历](https://supermemo.guru/wiki/Why_kids_hate_school%3F)。总会有一些时间留给电影，但这种经历很容易被一个疲惫的大脑所破坏：_「你做完作业就可以看那部电影了！」_。一些高中毕业生可能还会选择天体物理学的职业。然而，如果没有真正的激情，这种无趣的追求必然会导致更少的突破性成果。
 
-[![Straight line education from the alphabet to a PhD in astrophysics](https://supermemo.guru/images/thumb/d/d8/Straight_line_education_from_the_alphabet_to_astrophysics.png/600px-Straight_line_education_from_the_alphabet_to_astrophysics.png)](https://supermemo.guru/wiki/File:Straight_line_education_from_the_alphabet_to_astrophysics.png)
+![Straight line education from the alphabet to a PhD in astrophysics](assets/600px-Straight_line_education_from_the_alphabet_to_astrophysics.png)
 
 > **Figure:** When coercive learning based on a curriculum attempts to replicate a success of a child who follows its passions to a PhD in astrophysics, exploratory learning is diminished. It is replaced with linear learning devoid of passion. Knowledge loses on coherence. Comprehension is poor. Poor stability undermines the longevity of knowledge. Career in science is hardly possible. When such career is undertaken, it may be joyless and low on creative fruits
 >
