--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/14.baby-management-ying-er-guan-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/14.baby-management-ying-er-guan-li.md
@@ -72,7 +72,7 @@ Then there is a perfect conformist metaphor: baby dummy. A tool with a dozen of 
 
 还有一个完美的循规蹈矩的类比：婴儿假人。一种工具，有十几种健康和儿童心理学的反适应症。一个安抚奶嘴对我说：「_闭嘴！你已经喝牛奶了？没有乳头给你。_」我有点同情你。在公共场合哺乳仍被许多人视为变态。来自同伴的压力让你很难成为一个好妈妈。
 
-[![Baby dummy as a shut up metaphor.jpg](https://supermemo.guru/images/2/26/Baby_dummy_as_a_shut_up_metaphor.jpg)](https://supermemo.guru/wiki/File:Baby_dummy_as_a_shut_up_metaphor.jpg)
+![](assets/Baby_dummy_as_a_shut_up_metaphor.jpg)
 
 > **Figure:** Baby dummy as a shut up metaphor.
 >
@@ -94,7 +94,7 @@ For preschool, there is a perfect torture device: multi-seat toddler desk where 
 
 对于学前班来说，有一个完美的折磨设备：多座位的幼儿桌，孩子们被固定在一个半圆形的单张桌子里，有高高的后座，确保面向「老师」。这是一个完美的抗 ADHD 设备。坐立不安，头部运动，以及自己的兴趣爱好都被认为是一件坏事。
 
-[![Multi-seat toddler desk as perfect preschool torture device](https://supermemo.guru/images/0/04/Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)](https://supermemo.guru/wiki/File:Multi-seat_toddler_desk_as_perfect_preschool_torture_device.jpg)
+![](assets/Multi-seat_toddler_desk_as_perfect_preschool_torture_device-1562952926176.jpg)
 
 > **Figure:** Multi-seat toddler desk is a preschool torture device. [The brain says "keep exploring"](https://supermemo.guru/wiki/Education_counteracts_evolution). The authoritarian teacher says "Stop moving! Read my lips!". For more see: [Would you have a heart to cage a puppy?](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)
 >
