--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
@@ -156,7 +156,7 @@ School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and
 >
 > **The most powerful artificial activator of the learn drive I know is incremental learning**. [Spaced repetition](http://help.supermemo.org/wiki/Glossary:Spaced_repetition) in SuperMemo tends to bring up the same old material over and over again. [Leeches](http://help.supermemo.org/wiki/Glossary:Leech) in learning can poison the fun of review. [Incremental learning](https://supermemo.guru/wiki/Incremental_learning) makes it possible to dose in novelty with the inflow of new material interleaved with the review of the old material. The never-ending consolidation of the [knowledge tree](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)provides a constant growth of the "unfinished" leaves. Those act as attractors of novelty. In classical learning, forgetting tends to disintegrate the fabric of knowledge and leads to an asymptotic stagnation of the "surface of the tree". In [incremental learning](http://help.supermemo.org/wiki/Incremental_learning), that surface keeps increasing providing an ever increasing potential in novelty discovery. If your passion for learning is in decline, consider [incremental learning](http://help.supermemo.org/wiki/Incremental_learning). Slowly! Alternatively, inspirational reading can play a similar role.
 >
-> **我所知道的**[**学习内驱力**](https://supermemo.guru/wiki/Learn_drive)**中最强大的人工催化剂是**[**渐进学习**](http://help.supermemo.org/wiki/Incremental_learning)**。**SuperMemo 中的间隔重复往往会一遍又一遍地提到相同的旧材料。学习中的[水蛭](http://help.supermemo.org/wiki/Glossary:Leech)会毒害复习的乐趣。[渐进学习](https://supermemo.guru/wiki/Incremental_learning)使得新材料的流入与旧材料的复习交织在一起成为可能。[知识树](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)的不断巩固为“未完成”的叶子提供了持续的增长。这些充当了新鲜事物的吸引者。在传统学习中，遗忘往往会瓦解知识结构，导致“树的表面”的渐进停滞。在[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)中，这个表面不断增加，在新奇发现方面提供了越来越大的潜力。如果你对学习的热情在下降，考虑[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。慢慢来！或者，励志读物也可以起到类似的作用。
+> **我所知道的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)中最强大的人工催化剂是[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。**SuperMemo 中的[间隔重复](http://help.supermemo.org/wiki/Glossary:Spaced_repetition)往往会一遍又一遍地提到相同的旧材料。学习中的[水蛭](http://help.supermemo.org/wiki/Glossary:Leech)会毒害复习的乐趣。[渐进学习](https://supermemo.guru/wiki/Incremental_learning)使得新材料的流入与旧材料的复习交织在一起成为可能。[知识树](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)的不断巩固为“未完成”的叶子提供了持续的增长。这些充当了新鲜事物的吸引者。在传统学习中，遗忘往往会瓦解知识结构，导致“树的表面”的渐进停滞。在[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)中，这个表面不断增加，在新奇发现方面提供了越来越大的潜力。如果你对学习的热情在下降，考虑[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。慢慢来！或者，励志读物也可以起到类似的作用。
 >
 > If you encounter a boring or incomprehensible subject at school, you may need to suffer 45 minutes of inaction. In [incremental learning](https://supermemo.guru/wiki/Incremental_learning), you can switch subjects in seconds, change priorities, reschedule learning, or suffer the pain of excess complexity in the optimum window of time in hope of finding some fruit of knowledge \(see: [Push zone](https://supermemo.guru/wiki/Push_zone)\). In [incremental learning](http://help.supermemo.org/wiki/Incremental_learning), you are likely to stay in your comfort zone, enter the [push zone](https://supermemo.guru/wiki/Push_zone) on occasion, and stay away from regressive areas that waste your time. A subject that seems too hard today will become easy tomorrow. You do not ever need to suffer complexity in vain. You can venture into the same field once you are ready. In [incremental learning](http://help.supermemo.org/wiki/Incremental_learning), you optimize your choices using your [learn drive](https://supermemo.guru/wiki/Learn_drive) as a powerful guidance.
 >
