--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/01.introduction-qian-yan.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/01.introduction-qian-yan.md
@@ -58,11 +58,11 @@ True giants of educational thought had one thing in common: deep and unadulterat
 
 Some of the concepts in this [book](https://supermemo.guru/wiki/Problem_of_Schooling) are unique and I credit those to my three decades involvement in [free learning](https://supermemo.guru/wiki/Free_learning) based on [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). The work of giants has been extended with a bit of research on memory, sleep, creativity, and problems solving.
 
-这本[书](https://supermemo.guru/wiki/Problem_of_Schooling)中的一些概念是独特的，我把这些归功于我30年来在基于[间隔重复](https://supermemo.guru/wiki/Free_learning)的[自由学习](https://supermemo.guru/wiki/Spaced_repetition)中的投入。伟人的工作已经扩展到一些关于记忆、睡眠、创造力和解决问题方面的研究。
+这本[书](https://supermemo.guru/wiki/Problem_of_Schooling)中的一些概念是独特的，我把这些归功于我 30 年来在基于[间隔重复](https://supermemo.guru/wiki/Free_learning)的[自由学习](https://supermemo.guru/wiki/Spaced_repetition)中的投入。伟人的工作已经扩展到一些关于记忆、睡眠、创造力和解决问题方面的研究。
 
 I would like to believe that I care about kids no less than Gray or Holt, but I also bring an extra agenda that might be missing in their work: I am looking for a formula for mass-production of little Nobel Prize winners, researchers, engineers, and creative problem solvers. The good news is that this formula aligns perfectly with [free learning](https://supermemo.guru/wiki/Free_learning)philosophy for there is no true genius without true freedom. In other words, my departure from unadulterated love to the business of education is a minor one, and no kid shall ever be hurt by that deflection. Just the opposite, pure love that brings up a healthy and productive child is love fulfilled.
 
-我愿意相信，我对孩子们的关心不亚于 Gray 或 Holt ，但我也带来了他们的工作中可能缺失的一个额外议程:我正在寻找一个方案，用于批量培养小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习理念，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
+我愿意相信，我对孩子们的关心不亚于 Gray 或 Holt ，但我也带来了他们的工作中可能缺失的一个额外议程：我正在寻找一个方案，用于批量培养小诺贝尔奖得主、小研究人员、小工程师和小创造性问题解决者。好消息是，这个方案完全符合自由学习理念，因为没有真正的自由，就没有真正的天才。换句话说，我从纯粹的爱转向了教育事业，这是一个很小的转变，任何孩子都不会因为这种转变而受到伤害。恰恰相反，纯粹的爱能培养出一个健康而有成就的孩子，这就是爱的满足。
 
 ### 1.5 Executive Summary
 
@@ -70,7 +70,7 @@ I would like to believe that I care about kids no less than Gray or Holt, but I 
 
 This book is too long. You can best consume it with [incremental reading](https://supermemo.guru/wiki/Incremental_reading). If this is still too much, go to the [summary](https://supermemo.guru/wiki/Summary) and follow the links to things you disagree with. The ultimate summary is that **schooling undermines the brain potential carried by the young generation**. We can do far better. Not 20% better, not 200% better, far more! I include some numbers in the text.
 
-这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[摘要](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，上学削弱了年轻一代的大脑潜能。我们可以做得更好。不是 20% 更好，不是 200% 更好，而是更多！我在文章中涵盖了一些数字。
+这本书太长了。您可以通过[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)来最好地阅读它。如果这还样是太多，到[摘要](https://supermemo.guru/wiki/Summary)这一章，并遵循链接去阅读你不同意的东西。本书最终的结论是，**上学削弱了年轻一代的大脑潜能**。我们可以做得更好。不是 20% 更好，不是 200% 更好，而是更多！我在文章中涵盖了一些数字。
 
 ### 1.6 Kids are not adults in miniature
 
@@ -118,7 +118,7 @@ The biggest effect of schooling, instead of great learning, is the lifelong impa
 
 Early instruction is particularly dangerous. This [book](https://supermemo.guru/wiki/Problem_of_Schooling) introduces the concept of [toxic memory](https://supermemo.guru/wiki/Toxic_memory), which is monumental for understanding the harm inflicted by schooling. I have seen toxic memories thrive under the impact of [SuperMemo](https://supermemo.guru/wiki/SuperMemo). I saw them grow like you see plants or pet animals grow in your household. The faster we send kids to school, the greater the chance of the damage. Many governments around the world are eager to reduce the school age. They have no clue!
 
-早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[有毒记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，有毒记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们不知道！
+早期教育尤其危险。[本书](https://supermemo.guru/wiki/Problem_of_Schooling)介绍了[毒性记忆](https://supermemo.guru/wiki/Toxic_memory)的概念，这对于理解学校教育造成的危害是非常重要的。我曾见过在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的影响下，毒性记忆蓬勃发展。我看见它们生长，就像你看见植物或宠物在你家里成长一样。我们越早送孩子上学，受害的可能性就越大。世界上许多国家的政府都渴望降低学龄。他们对此一无所知！
 
 ### 1.10 Futility of cramming
 
@@ -162,7 +162,7 @@ Once we free our own kids to do [free learning](https://supermemo.guru/wiki/Free
 
 Schools can be a blessing. In a small village in post-Ebola Liberia, in a Rio favela, in a 10-house village in Poland, in the Mathare slum, in post-Taliban Afghanistan, or in a poverty trap of immigrant banlieue, a school is a blessing. It may be an escape from poverty, violence, or abuse. It may be a path to an enlightened future. In my vicinity, kids do drugs when they do not go to school. In a village, 15 km away, their prime entertainment is drinking beer in front of the local shop. In that sense, school is shielding kids from the poisonous effects of inaction, inert community, or pathological family.
 
-学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在玛萨雷（Mathare）贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
+学校可以是一种眷顾。在后埃博拉时代的利比里亚，在里约热内卢贫民窟的一个小村庄，在波兰的一个 10 户人家的村庄，在后塔利班时代的阿富汗，在 Mathare 贫民窟，在贫穷的移民郊区，学校是一种眷顾。它可能是一种摆脱贫困、暴力或虐待的方式。这也许是一条通向光明未来的道路。在我附近，孩子们不上学就吸毒。在 15 公里外的一个村子里，他们的主要娱乐活动是在当地商店前喝啤酒。从这个意义上说，学校是在保护孩子免受不作为、迟钝的社区或病态家庭的有害影响。
 
 However, schools are a blessing only early in those few tough circumstances, esp. early in the evolutionary process of a developing school system. After they are a blessing, schools become universal, and then compulsory. And then they evolve into a tool of oppression that optimizes in one direction only: more pressure for better scores. All that oppression comes with best intentions that are driven by ignorance.
 
@@ -226,7 +226,7 @@ Great ideas about great education have been invented and forgotten and then re-i
 
 Plato, Aristotle, and John Locke have been dead for centuries. [John Holt](https://supermemo.guru/wiki/John_Holt) is dead. Ivan Illich is dead. Urie Bronfenbrenner is dead. So are Raymond Moore and Roland Meighan. They left great books that inspire new generations of educators. Their [golden aphorisms](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F) are great memes for the web, but they have little impact on education driven by short-term demands of the day. The idea of [free learning](https://supermemo.guru/wiki/Free_learning) meets with the resistance of short-term goals worshiped by the majority affected by age's old ailment: short-sightedness.
 
-柏拉图、亚里士多德和约翰·洛克已经去世好几个世纪了。[约翰·霍尔特](https://supermemo.guru/wiki/John_Holt)死了。伊万·伊里奇死了。乌里·布朗芬布伦纳死了。雷蒙德•摩尔（Raymond Moore）和罗兰•梅翰（Roland Meighan）也是如此。他们留下了激励新一代教育家的伟大著作。他们的[黄金格言](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F)对于网络来说是伟大的模因，但它们对当时短期需求驱动的教育影响甚微。[自由学习](https://supermemo.guru/wiki/Free_learning)的理念遭到多数受老毛病（短视）影响的人所崇拜的短期目标的抵制。
+柏拉图、亚里士多德和 John Locke 已经去世好几个世纪了。[John Holt](https://supermemo.guru/wiki/John_Holt) 死了。Ivan Illich 死了。Urie Bronfenbrenner 死了。Raymond Moore 和 Roland Meighan 也是如此。他们留下了激励新一代教育家的伟大著作。他们的[黄金格言](https://supermemo.guru/wiki/Gray:_What_genius_minds_think_of_schooling%3F)对于网络来说是伟大的模因，但它们对当时短期需求驱动的教育影响甚微。[自由学习](https://supermemo.guru/wiki/Free_learning)的理念遭到多数受老毛病（短视）影响的人所崇拜的短期目标的抵制。
 
 [Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg) and [John Taylor Gatto](https://supermemo.guru/wiki/John_Taylor_Gatto) are in their 80s. [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) is in his 70s. [Ken Robinson](https://supermemo.guru/wiki/Ken_Robinson) will be seventy soon. Even the new kid on the block, [Sugata Mitra](https://supermemo.guru/wiki/Sugata_Mitra) is past his mid 60s.
 
@@ -250,11 +250,11 @@ My [book](https://supermemo.guru/wiki/Problem_of_Schooling) will [fail](https://
 
 Radical dreams of Holt, Gatto, and Illich will come true soon. Not for whole societies though. One job of schooling will likely not end: schools will remain containers for storing kids while parents are at work. For this to change, we would need to take a collective breath, reprioritize, slow down, and take a more creative approach to life. I am not optimistic. The rush will continue.
 
-霍尔特、盖茨托和伊里奇的激进梦想很快就会实现。但这并不适用于整个社会。学校教育的一项工作可能不会结束：当家长们在工作时，学校仍将是托管孩子的设施。为了改变这种状况，我们需要集体呼吸，调整优先顺序，放慢脚步，采取更有创造性的生活方式。我并不乐观。这股热潮将继续下去。
+Holt 、Gatto 和 Illich 的激进梦想很快就会实现。但这并不适用于整个社会。学校教育的一项工作可能不会结束：当家长们在工作时，学校仍将是托管孩子的设施。为了改变这种状况，我们需要集体呼吸，调整优先顺序，放慢脚步，采取更有创造性的生活方式。我并不乐观。这股热潮将继续下去。
 
 However, more kids will get homeschooled and fight for changes in the law, more [democratic schools](https://supermemo.guru/wiki/Democratic_school) will crop up, more Montessori schools and other freedom-based solutions will become popular. The old-style public school will rule the roost, but freedoms will be expanded by law. Nationalism and national curriculum will be curbed. The explosion of [free learning](https://supermemo.guru/wiki/Free_learning) is exponential.
 
-然而，更多的孩子将在家上学，并为法律的改变而斗争，更多的[民主学校](https://supermemo.guru/wiki/Democratic_school)将涌现，更多的蒙特梭利学校和其他基于自由的解决方案将变得流行。旧式的公立学校将统治一切，但自由将通过法律得到扩大。民族主义和国家课程将受到限制。[自由学习](https://supermemo.guru/wiki/Free_learning)的爆炸式增长是指数式的。
+然而，更多的孩子将在家上学，并为法律的改变而斗争，更多的[民主学校](https://supermemo.guru/wiki/Democratic_school)将涌现，更多的蒙特梭利学校和其他基于自由的解决方案将变得流行。旧式的公立学校将统治一切，但自由将通过法律得到扩大。民族主义和国家课程将受到限制。[自由学习](https://supermemo.guru/wiki/Free_learning)的爆炸增长是指数式的。
 
 I am glad I am not dead yet. Old Prussian school system will die soon. I wager I will see it happen!
 
