--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/05.effect-of-schooling-on-the-learn-drive-xue-xiao-jiao-yu-dui-xue-xi-nei-qu-li-de-ying-xiang.md
@@ -22,7 +22,7 @@ Some scientists believe that we innately lose our novelty seeking and our [learn
 
 > Understanding the [learn drive](https://supermemo.guru/wiki/Learn_drive) and the mechanism by which it supposedly declines over time is essential for [optimizing education](https://supermemo.guru/wiki/Optimization_of_education)
 >
-> 理解学习[内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
+> 理解[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和它被认为随着时间推移而下降的机制是[优化教育](https://supermemo.guru/wiki/Optimization_of_education)的关键。
 
 ### 5.2 Learn drive vs. knowledge
 
@@ -70,7 +70,7 @@ Metaphorically speaking, teachers throw pieces of knowledge at students and hope
 
 This is one of the biggest ailments of schooling: students keep complaining that school is too boring or school is too hard. Students are not happy, and this works against the system. This problem cannot be effectively resolved if we retain the old classroom learning system. It is impossible to optimize learning in a group of students who will always diverge in their knowledge due to different passions, different interests, different talents, and different learning speeds. The only effective optimization solution is [**self-directed learning**](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning).
 
-这是学校教育的最大弊病之一：学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
+这是学校教育的最大弊病之一：学生们总是抱怨学校太无聊或太辛苦。学生们不快乐，这与系统背道而驰。如果我们保持旧的课堂学习制度，这个问题就不能被有效地解决。在一个总是因为不同的激情、不同的兴趣、不同的天赋、不同的学习速度而导致知识差异的群体中，优化学习是不可能的。唯一有效的优化解决方案是[**自我导向学习**](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。
 
 ### 5.4 Teacher problem
 
@@ -82,7 +82,7 @@ A well-intentioned teacher may also contribute to the suppression of the learn d
 
 If a child has a question _"Where is New York? In which country?"_, a natural instinct of a parent or teacher is to provide the answer. If the child is exposed to the same question frequently enough, she will be able recall the answer on her own. Otherwise, she will need help again. Overall effect of such review would be similar to review in [SuperMemo](https://supermemo.guru/wiki/SuperMemo), except it would come naturally without the extra cost of the interaction with a computer, and it would come in a random manner without optimizing for the memory effect of each review. This type of interaction has both suppressive and enhancing effect on the [learn drive](https://supermemo.guru/wiki/Learn_drive). The interest in New York as part of the USA will gradually decline as the fact becomes known, i.e. no longer new. The interest in things related to the USA may increase in proportion to the interest in New York. The interest in things related to New York may increase in proportion to the interest in the USA.
 
-如果一个孩子有一个问题「纽约在哪里？在哪个国家？」，父母或老师的自然本能是提供答案。如果孩子经常面对同样的问题，她将能够自己回忆起答案。否则，她将再次需要帮助。这种复习的整体效果类似于 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 中的复习，只不过它是自然产生的，没有与计算机交互的额外成本，而且它是随机产生的，没有优化每次复习的记忆效果。这种互动对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)既有抑制作用又有增强作用。随着事实逐渐被记住，人们对纽约作为美国一部分的兴趣也会逐渐减退，即不再是新鲜事。对美国相关事物的兴趣可能会随着对纽约兴趣的增加而增加。对纽约相关事物的兴趣可能会与对美国的兴趣成比例增加。
+如果一个孩子有一个问题「*纽约在哪里？在哪个国家？*」，父母或老师的自然本能是提供答案。如果孩子经常面对同样的问题，她将能够自己回忆起答案。否则，她将再次需要帮助。这种复习的整体效果类似于 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 中的复习，只不过它是自然产生的，没有与计算机交互的额外成本，而且它是随机产生的，没有优化每次复习的记忆效果。这种互动对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)既有抑制作用又有增强作用。随着事实逐渐被记住，人们对纽约作为美国一部分的兴趣也会逐渐减退，即不再是新鲜事。对美国相关事物的兴趣可能会随着对纽约兴趣的增加而增加。对纽约相关事物的兴趣可能会与对美国的兴趣成比例增加。
 
 A far more interesting interaction occurs when the child **does not** receive an instant feedback from a teacher. The question may remain unanswered, and knowledge will not increase. However, all questions asked that get no instant response contribute to the learn drive. The location of New York remains a mystery, which will get more interesting with each exposure. The increase in interest will progress along formulas similar to those that govern the increase in [long-term memory stability](https://supermemo.guru/wiki/Memory_stability) \(as predicted by the [two component model](https://supermemo.guru/wiki/Two_component_model_of_memory)\). The increase in stability of interest does not have an immediate contribution to knowledge, but it has a powerful impact on the [learn drive](https://supermemo.guru/wiki/Learn_drive). The child will be curious to explore and find out on its own in a competitive process where all areas of interest will compete for child's focus that will be context dependent. For example, in the context of biology, New York might not even light up in memory. However, in the context of map inspection, or a geographic documentary, the question may pop up again and drive further explorations. Once the child finds answers to a burning question, i.e. a question with a high degree of relative importance burnt stable in memory, the reward of learning becomes magnified. The pleasure of learning increases. The reward propagates in associative memory and enhances positive associations related to knowing New York, knowing the US, and knowing things related to both. This is a reward propagation cascade whose depth depends on the level of reward and the original degree of curiosity. That cascade involves memory consolidation. This way, by not answering a question, a teacher may potentially increase consolidation in a larger areas of memory networks. By definition, this reduces the need for review of knowledge in the entire learning process.
 
@@ -108,7 +108,7 @@ This does not mean we should leave all questions unanswered. There are two facto
 
 There are dangers and inherent inefficiencies in the learn drive guidance system. It can easily be tricked into seeing novelty in areas which we would not classify as desirable. For an average student, the game of checkers quickly gets boring. To a sophisticated mind, a game of chess is more fun but it also may easily get boring. To a grandmaster, who can see chess as a colorful pattern of chessboard combinations with mnemonic stories that rival the most interesting book of history, chess may be a never-ending source of fascination. In other words, a chessboard and a few chess pieces can feed novelty seeking system with rewarding stimuli for eternity.
 
-学习内驱力引导系统存在一定的危险性和固有的低效性。在我们认为不合适的领域看到新奇事物它很容易被骗，。对于一个普通的学生来说，跳棋游戏很快就变得无聊了。对于一个老练的人来说，下国际象棋更有趣，但也可能很容易变得无聊。对于一个能把国际象棋看作是棋盘和记忆故事相结合而成的丰富多彩的图案的大师来说，国际象棋可能是一种永无止境的魅力源泉。换句话说，一个棋盘和几副棋子可以为求新欲系统提供无穷无尽的奖励刺激。
+学习内驱力引导系统存在一定的危险性和固有的低效性。我们很容易被骗去看一些我们并不感兴趣的领域的新奇事物。对于一个普通的学生来说，跳棋游戏很快就变得无聊了。对于一个老练的人来说，下国际象棋更有趣，但也可能很容易变得无聊。对于一个能把国际象棋看作是棋盘和记忆故事相结合而成的丰富多彩的图案的大师来说，国际象棋可能是一种永无止境的魅力源泉。换句话说，一个棋盘和几副棋子可以为求新欲系统提供无穷无尽的奖励刺激。
 
 For a teen, a video game can easily employ the trick of a chess game by dragging a young mind into an endless labyrinth of new levels to explore and new combinations of tools or situations that never seem to get boring. With a competitive factor in teams, games can be addictive and dangerous.
 
@@ -120,9 +120,9 @@ In an adult, a passion for his favorite sport may also provide a never ending so
 
 The above means that we cannot bank on [self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning) to always feed our minds with useful knowledge. Social media thrives on gossip and trivia. Both teens and adults can sink untold hours in Facebook without coming up with useful goods. We seem to never get bored with social interaction and mobile phones keep buzzing with a chatter that satisfies our novelty cravings.
 
-综上所述，我们不能指望自主学习总是用有用的知识来充实我们的头脑。社交媒体因八卦和琐事而繁荣。青少年和成年人都可能在 Facebook 上消磨数不清的时间，却找不到有用的东西。我们似乎从来不会对社交互动感到厌烦，手机里不停地传来各种各样的闲聊声，满足了我们对新奇事物的渴望。
+综上所述，我们不能指望[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)总是用有用的知识来充实我们的头脑。社交媒体因八卦和琐事而繁荣。青少年和成年人都可能在 Facebook 上消磨数不清的时间，却找不到有用的东西。我们似乎从来不会对社交互动感到厌烦，手机里不停地传来各种各样的闲聊声，满足了我们对新奇事物的渴望。
 
-For many kids with talents, [self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning) is all that is needed to soar. The universal formula for all kids for a drive in the quest for valuable knowledge is **self-directed learning with a dose of trajectory-nudging guidance from any corrector system**. This corrector can come from a parent, from a teacher, or from a peer \(incl. older peers\). The trajectory corrector needs to be **placed in the optimum push zone** to ensure correct trajectory without upsetting the system. Naturally, there is no better corrector than mature self-awareness with a pinch of self-discipline. An educated adult should understand the need for lifelong learning and understand the right direction for his learning to progress. Ideally, life itself is the best corrector of the learning trajectory.
+For many kids with talents, [self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning) is all that is needed to soar. The universal formula for all kids for a drive in the quest for valuable knowledge is [**self-directed learning**](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning) **with a dose of trajectory-nudging guidance from any corrector system**. This corrector can come from a parent, from a teacher, or from a peer \(incl. older peers\). The trajectory corrector needs to be **placed in the optimum** [**push zone**](https://supermemo.guru/wiki/Push_zone) to ensure correct trajectory without upsetting the system. Naturally, there is no better corrector than mature self-awareness with a pinch of self-discipline. An educated adult should understand the need for lifelong learning and understand the right direction for his learning to progress. Ideally, life itself is the best corrector of the learning trajectory.
 
 对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下**[**自我导向学习**](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)**。**这个校正者可以是父母、老师或同龄人（包括年长的同龄人）。学习轨迹校正器需要**在**[**最佳推动区**](https://supermemo.guru/wiki/Push_zone)，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
@@ -176,7 +176,7 @@ School suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive) and
 >
 > Conversely, the [learn drive](https://supermemo.guru/wiki/Learn_drive) can be suppressed with [SuperMemo](https://supermemo.guru/wiki/SuperMemo). If the student stops learning new things and only keeps retaining old knowledge in SuperMemo, forgetting will prune all attractive surfaces on the knowledge tree. Only the dry core will remain in SuperMemo. While knowledge maintained with active learning and [incremental learning](https://supermemo.guru/wiki/Incremental_learning) resembles a lively tree full of hungry tendrils, dead knowledge maintained with SuperMemo is like a rejected Christmas tree with ever decreasing number of dried out branch endings. For an advanced learner, the effort that comes with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) may still evoke the [pleasure of knowing](https://supermemo.guru/wiki/Pleasure_of_knowing). However, this kind of pleasure is best ignited with the actual use of the learned knowledge. Regurgitating old knowledge with no new material has the same suppressive effect as schooling. Similarly, it undermines the love of learning. If you happen to experience a decline of your love of repetitions, add new value to your collection, and redistribute old material in manageable portions into the future. This should apply primarily to old unused exam material that you retain half-heartedly without a true conviction about its usefulness.
 >
-> 反过来，学习内驱力有可能被 SuperMemo 抑制。如果学生停止学习新事物，只在 SuperMemo 中保留旧知识，遗忘会删除知识树上所有吸引人的表面。只有干芯会留在 SuperMemo 中。用主动学习和渐进学习来维持知识就像一棵充满饥饿卷须的生气勃勃的树，而用 SuperMemo 来维持的死知识就像一棵被丢弃的圣诞树，枯干的树枝末端的数量在不断减少。对于一个高级学习者来说，间隔重复所带来的努力可能仍然会唤起认知的乐趣。然而，这种快乐最好通过实际运用所学知识来激发。在没有新材料的情况下，死记硬背旧知识与上学具有同样的抑制作用。同样，它破坏了对学习的热爱。如果你不再喜欢重复，那就给你的收藏增加新的价值，并将旧的材料以容易管理的分量重新分配到将来。这应该主要适用于旧的未使用的考试材料，你对这些材料的用处没有真正的信心，只是敷衍了事。
+> 反过来，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)有可能被 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 抑制。如果学生停止学习新事物，只在 SuperMemo 中保留旧知识，遗忘会删除知识树上所有吸引人的表面。只有干芯会留在 SuperMemo 中。用主动学习和[渐进学习](https://supermemo.guru/wiki/Incremental_learning)来维持知识就像一棵充满饥饿卷须的生气勃勃的树，而用 SuperMemo 来维持的死知识就像一棵被丢弃的圣诞树，枯干的树枝末端的数量在不断减少。对于一个高级学习者来说，[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)所带来的努力可能仍然会唤起[认知的乐趣](https://supermemo.guru/wiki/Pleasure_of_knowing)。然而，这种快乐最好通过实际运用所学知识来激发。在没有新材料的情况下，死记硬背旧知识与上学具有同样的抑制作用。同样，它破坏了对学习的热爱。如果你不再喜欢重复，那就给你的收藏增加新的价值，并将旧的材料以容易管理的分量重新分配到将来。这应该主要适用于旧的未使用的考试材料，你对这些材料的用处没有真正的信心，只是敷衍了事。
 >
 > > [SuperMemo](https://supermemo.guru/wiki/SuperMemo) with no new material is similar to boring classes at school. Both suppress the [learn drive](https://supermemo.guru/wiki/Learn_drive)
 > >
@@ -194,7 +194,7 @@ Instead of noticing a decline in my own learning passions, I observe the reverse
 >
 > 个人轶事。[为什么要用轶事？](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 >
-> I was never too interested in history, in a chapter devoted to self-directed learning, I explain that my learning can be divided into three stages:
+> I was never too interested in history, in a [chapter devoted to self-directed learning](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning), I explain that my learning can be divided into three stages:
 >
 > 1. learning at school with zero efficiency,
 > 2. learning with SuperMemo with some progress, and
@@ -220,17 +220,17 @@ Instead of noticing a decline in my own learning passions, I observe the reverse
 >
 > As for food tastes, I am not sure how much of that is really programmed into the brain, and how much comes from the same mechanism as knowledge in a conservative brain. After the collapse of the Berlin Wall, I had my first ever chance to taste mussels. I was 28. That's the age when we are supposed to have lost our ability to expand our taste range. When taking in my first nibble, I was pretty sure I would vomit. It felt like torture. I could say to myself a dozen times "_this is just healthy food, many people enjoy it, use your reason, why get emotional..._", it did not help much. I managed to swallow a few pieces and was relieved when my portion was over. However, I did not give up. I tried again. I tried to fit my optimum [push zone](https://supermemo.guru/wiki/Push_zone) that got very narrow. If I tried too hard or too early, I would hate mussels for life. If I tried too late, I would have forgotten what I had learned in my first experience. My second take at mussels was a bit more relaxed. I was able to find some nice tastes in there despite suffering a lot. A few months later, I enjoyed mussels as much as anyone introduced to the food at earlier stages. There was no novelty seeking in that experience. However, my tastes have been reshaped. Today, I love mussels. Delicious! Am I really deprived of novelty seeking in the area of foods? Not entirely, I love experimenting with various spices and spice combinations. My friend ate a scorpion in Thailand yesterday, his happy face made me intrigued. If I was in Thailand...
 >
-> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳[推动区](https://supermemo.guru/wiki/Push_zone)，这个推动区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
+> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「*这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化…*」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳[推动区](https://supermemo.guru/wiki/Push_zone)，这个推动区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
 >
 > As for boredom, my own professional life is subject to the same mechanisms of saturation and boredom.
 >
 > 至于无聊，我自己的职业生涯也受制于同样的饱和和无聊的机制。
 >
-> As a student, I tried out dozens of programming languages. The more exotic the language the greater the fascination. SuperMemo was developed in Pascal in 1987. Since then I settled on Pascal and stopped my explorations. A cynic would attribute that to aging. My interpretation is different. I use the tool that works best for me. I reserve my exploration time for other things. I do not explore less. I explore differently. My [learn drive](https://supermemo.guru/wiki/Learn_drive) in the area of programming languages has been satisfied, however, my overall learn drive is still pretty hungry.
+> As a student, I tried out dozens of programming languages. The more exotic the language the greater the fascination. SuperMemo was developed in Pascal in 1987. Since then I settled on Pascal and stopped my explorations. A **cynic** would attribute that to aging. My interpretation is different. I use the tool that works best for me. I reserve my exploration time for other things. I do not explore less. I explore differently. My [learn drive](https://supermemo.guru/wiki/Learn_drive) in the area of programming languages has been satisfied, however, my overall learn drive is still pretty hungry.
 >
 > 作为一名学生，我尝试了几十种编程语言。语言越有异国情调，就越有魅力。SuperMemo 是在 1987 年用 Pascal 开发的。从那以后，我固定在 Pascal 并停止了我的探究。**犬儒学派**的人会把这归因于衰老。我的解释不同。我使用最适合我的工具。我把我的探究时间留给了其他事情。我没有减少探究。我探究不同的方向。我在编程语言领域的学习内驱力已经得到了满足，但是我的整体学习内驱力仍然很饥渴。
 >
-> Like an immature student, I also got bored with spaced repetition and memory saying "_there is not much to learn or discover in the field_". My colleagues, esp. Krzysztof Biedalak and Janusz Murakowski, gave me a tiny corrector push saying "_The two-variable model of memory could make the algorithm simpler and easier to implement, license, and promote_". Once I started exploring the dried up area, I have discovered a million things I did not know, and re-ignited my passion for spaced repetition. Ironically, the algorithm did not get that much simpler, but the truth is that dead passions can be re-awakened.
+> Like an immature student, I also got bored with spaced repetition and memory saying "_there is not much to learn or discover in the field_". My colleagues, esp. Krzysztof Biedalak and Janusz Murakowski, gave me a tiny corrector push saying "_The [two-variable model of memory](http://www.super-memory.com/english/2vm.htm) could make the algorithm simpler and easier to implement, license, and promote_". Once I started exploring the dried up area, I have discovered a million things I did not know, and re-ignited my passion for spaced repetition. Ironically, the algorithm did not get that much simpler, but the truth is that dead passions can be re-awakened.
 >
 > 像一个不成熟的学生一样，我也厌倦过间隔重复和记忆，说「_在这个领域没有什么可学习或发现的_」。我的同事，尤其是 Krzysztof Biedalak 和 Janusz Murakowski ，给了我一个小小的校正推送，说「[_双变量记忆模型_](http://www.super-memory.com/english/2vm.htm)_可以使算法更简单，更容易实现、许可和推广_」。当我开始探索这个干涸的领域，我就发现了无数我不知道的东西，并重新点燃了我对间隔重复的热情。讽刺的是，这个算法并没有变得那么简单，但事实是，熄灭的激情可以被重新点燃。
 
