--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/09.toxic-memory-du-xing-ji-yi.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/09.toxic-memory-du-xing-ji-yi.md
@@ -354,7 +354,7 @@ Futile memories are poorly formed and hard to remember even with [SuperMemo](htt
 
 On occasion, an unwelcome memory connection may be established. For example, English words _indigent_ and _indigenous_ can easily be confused due to their similarity. If B is similar to C, at some point, A-&gt;C confusion may set in. There is a very simple tool for breaking up all unwelcome memories: forgetting. Unwelcome memory A-&gt;C is unlikely to be useful in natural contexts and will remain unused for a while until it dissolves naturally. However, if repeated drilling is enforced, e.g. at school or with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), the unwelcome memory may become a **parasitic memory**\(i.e. unwelcome memory that would not go away\). This phenomenon is one of the main reasons many users get discouraged in their use of spaced repetition. When used inappropriately, optimum review may optimally set in parasitic memories that can be very hard to eradicate. Programs like [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can quickly establish long-term memories than can last month, or years or even a lifetime. If a parasitic memory is established, it can do more damage than just causing confusion via its falsehood.
 
-有时，可能会建立不受欢迎的内存连接。例如，英语单词 _indigent_ 和 _indigenous_ 很容易因为相似而混淆。如果 B 与 C 相似，在某一点上，A-&gt;C可能会产生混淆。有一个非常简单的方法可以打破所有不受欢迎的记忆：遗忘。不受欢迎的记忆 A-&gt;C 在自然上下文中不太可能有用，并且会在一段时间内不被使用，直到它自然地溶解。然而，如果反复操练，例如在学校或[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)，不受欢迎的记忆可能成为**寄生记忆**（即，不受欢迎的记忆不会消失）。这种现象是许多用户不鼓励使用间隔重复的主要原因之一。当使用不当时，最佳回顾可能最佳地设置在很难根除的寄生记忆中。像 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 这样的程序比上个月、几年甚至一生都能快速建立长期记忆。如果寄生记忆被建立起来，它所造成的伤害将不仅仅是由于它的虚假而引起的混乱。
+有时，可能会建立不受欢迎的内存连接。例如，英语单词 _indigent_ 和 _indigenous_ 很容易因为相似而混淆。如果 B 与 C 相似，在某一点上，A-&gt;C可能会产生混淆。有一个非常简单的方法可以打破所有不受欢迎的记忆：遗忘。不受欢迎的记忆 A-&gt;C 在自然上下文中不太可能有用，并且会在一段时间内不被使用，直到它自然地溶解。然而，如果反复操练，例如在学校或[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)，不受欢迎的记忆可能成为**寄生记忆**（即，不会消失的不受欢迎的记忆）。这种现象是许多用户不鼓励使用间隔重复的主要原因之一。当使用不当时，最佳回顾可能最佳地设置在很难根除的寄生记忆中。像 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 这样的程序比上个月、几年甚至一生都能快速建立长期记忆。如果寄生记忆被建立起来，它所造成的伤害将不仅仅是由于它的虚假而引起的混乱。
 
 In the extreme case, parasitic memory can become a **toxic memory**. When a parasitic memory A-&gt;C is drilled regularly, it is likely to cause stress to the user via all forms of penalties. There will be one more memory connection established between the stimulus A and the penalty, which may be as trivial as a mild trigger of anxiety. Questions related to A will become punitive in nature. The student will gradually get conditioned to dislike learning. This can be a dislike of a particular portion of the learning material, or the whole domain \(e.g. chemistry\). In the most extreme case, toxic memories can lead to a dislike of learning in general. This happens all the time around the planet as a result of [schooling](https://supermemo.guru/wiki/Problem_of_schooling). Toxic memories are one of the prime reasons schooling does not work and [why kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
