--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/23.references-can-kao-wen-xian.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/23.references-can-kao-wen-xian.md
@@ -1,5 +1,5 @@
 # 23.参考文献
-
+[TOC=2,5]
 ## Neuroscience
 
 * [Learning acceleration via stress](https://supermemo.guru/wiki/Learning_acceleration_via_stress)
