--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/11.optimum-push-zone-zui-jia-tui-dong-qu.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/11.optimum-push-zone-zui-jia-tui-dong-qu.md
@@ -1,5 +1,5 @@
 # 11.最佳推动区
-
+[TOC=3,5]
 ## 11 Optimum push zone
 
 ## 最佳推动区
@@ -28,7 +28,7 @@ The **optimum push zone** is usually far narrower than it is popularly assumed. 
 
 ### 11.2 Zone of proximal development
 
-### **近侧发展区**
+### 近侧发展区
 
 **Zone of proximal development \(ZPD\)** was defined by [Vygotski](https://en.wikipedia.org/wiki/Lev_Vygotsky) as the optimum guidance zone in which a student can master harder material or skills with a degree of guidance from a tutor. Zone of proximal development is often discussed in education. It may fit classroom situations, however, it does not extend into [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning).
 
