--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
@@ -235,7 +235,7 @@ You may wonder why I picked this scary example with a boat. For ethical reasons,
 >
 > Why am I not outraged at this parental attitude? The reason is that my first swimming lessons were in a very similar category. My brother, 16 years senior, was a great early coach and teacher. He would toss me off a 3-5 meter guard tower to deep water in a lake. I was 6 years old and I could not swim. However, the distance I needed to make was just 2-4 meters to the pier. The best part of the experience was the crowd of spectators who cheered a tiny guy taking a plunge from a height. I was a little showoff and for show I was ready to risk my life. If we review the list of factors affecting the outcome of the experience, I seem to have met all conditions for making it fun, positive and effective. I loved the crowd and cheers. I was not too old to be anxious. It was a middle of a hot day, and I trusted my brother as no one else in the world. It was great. After this radical start, I gradually improved my swimming skills to cross many scary lakes and rivers before my teens. Interestingly, later in life, I became more risk averse and lost some of my resilience, mostly through neglect. Last but not least, I was powerfully impacted by the movie "_The Jaws_". By the time I was 17 years old, swimming across a lake or out into sea would always bring back some scenes from the movie.
 >
-> 为什么我对这种父母态度不感到愤怒？原因是我的第一次游泳课程属于非常相似的情况。我哥哥比我大16岁，是一位伟大的幼儿早教和老师。他会把我从一个3-5米长的警卫塔扔到湖里的深水里。那时我6岁，我不会游泳。然而，我距离码头只有2-4米。这次经历的最佳部分是一群观众，他们为一个从高处跳下的小个子欢呼。我有点爱炫耀，为了表演我已经准备好冒险了。如果我们回顾一下影响体验结果的因素列表，我似乎已经满足了让它变得有趣、积极和有效的所有条件。我喜欢人群和欢呼。我还没有老到看淡世俗的地步。那是一个大热天，我相信我的兄弟是世界上最可靠的人。太棒了。在这个刺激的开始之后，我逐渐提高了我的游泳技巧，在我十几岁之前就穿过了许多可怕的湖泊和河流。有趣的是，在以后的生活中，我变得更加厌恶风险并且失去了一些韧性，主要是由于忽视。最后，我受到电影「大白鲨」的强烈影响。在我17岁的之后，游泳穿过湖泊或者进入大海总会让我想起电影中的一些场景。
+> 为什么我对这种父母态度不感到愤怒？原因是我的第一次游泳课程属于非常相似的情况。我哥哥比我大 16 岁，是一位伟大的幼儿早教和老师。他会把我从一个 3 - 5 米高的警卫塔扔到湖里的深水里。那时我 6 岁，我不会游泳。然而，我距离码头只有 2 - 4 米。这次经历的最佳部分是一群观众，他们为一个从高处跳下的小个子欢呼。我有点爱炫耀，为了表演我已经准备好冒险了。如果我们回顾一下影响体验结果的因素列表，我似乎已经满足了让它变得有趣、积极和有效的所有条件。我喜欢人群和欢呼。我还没有老到看淡世俗的地步。那是一个大热天，我相信我的兄弟是世界上最可靠的人。太棒了。在这个刺激的开始之后，我逐渐提高了我的游泳技巧，在我十几岁之前就穿过了许多可怕的湖泊和河流。有趣的是，在以后的生活中，我变得更加厌恶风险并且失去了一些韧性，主要是由于忽视。最后，我受到电影「大白鲨」的强烈影响。在我 17 岁的之后，游泳穿过湖泊或者进入大海总会让我想起电影中的一些场景。
 
 [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) advocates trustful parenting. In the present world, it seems awfully hard, but without a degree of risk and hardening, we won't raise a generation of conquerors, astronauts, CEOs or perhaps even Einsteins.
 
